Se modifico Buscado

--- a/TPE5-diazpace_molleker_lucero/html/buscado.html
+++ b/TPE5-diazpace_molleker_lucero/html/buscado.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <header class="navegation">
-        <a href="home.html"  class="logo-navigation"><img class="img-logo" src="../images/logo_blanco1.png" alt=""></a>
-       
+             <a href="home.html"  class="logo-navigation"><img class="img-logo anima" src="../images/logo_blanco1.png" alt=""></a>
         <section id="busqueda">
            <input class="search m" type="text" placeholder="Buscar..." >
            <a href="buscado.html"><img class="lupa m" src="../images/lupa.png" alt="lupa-buscar"></a> 
@@ -63,7 +62,7 @@
             </section>
                     <section class="actions margin-actions">
                         <div class="action action1"></div>
-                        <div class="action action2"></div>
+                        <a href="comentarios.html" class="action action2"></a>
                         <div class="action action3"></div>
                     </section>
         </section>
@@ -71,11 +70,11 @@
             <div class="songs song4 song-search"></div>
             <section class="song-info">
                 <p class="p-info">Café la humedad - Cacho Castaña</p>
-                <p>4.5 min</p>
+                <p class="p-info">4.5 min</p>
             </section>
                     <section class="actions margin-actions">
                         <div class="action action1"></div>
-                        <div class="action action2"></div>
+                        <a href="comentarios.html" class="action action2"></a>
                         <div class="action action3"></div>
                     </section>
         </section>
@@ -83,11 +82,11 @@
             <div class="songs song3 song-search"></div>
             <section class="song-info">
                 <p class="p-info">I want to be free - Freddy Mercury</p>
-                <p>3.5 min</p>
+                <p class="p-info">3.5 min</p>
             </section>
                     <section class="actions margin-actions">
                         <div class="action action1"></div>
-                        <div class="action action2"></div>
+                        <a href="comentarios.html" class="action action2"></a>
                         <div class="action action3"></div>
                     </section>
         </section>
@@ -95,11 +94,11 @@
             <div class="songs song1 song-search"></div>
             <section class="song-info">
                 <p class="p-info">Radio gaga - Queen</p>
-                <p>6.1 min</p>
+                <p class="p-info">6.1 min</p>
             </section>
                     <section class="actions margin-actions">
                         <div class="action action1"></div>
-                        <div class="action action2"></div>
+                        <a href="comentarios.html" class="action action2"></a>
                         <div class="action action3"></div>
                     </section>
         </section>
@@ -107,7 +106,7 @@
             <div class="songs song5 song-search"></div>
             <section class="song-info">
                 <p class="p-info">Beat it - Michael Jackson</p>
-                <p>5.8 min</p>
+                <p class="p-info">5.8 min</p>
             </section>
                     <section class="actions margin-actions">
                         <div class="action action1"></div>
@@ -132,7 +131,7 @@
                 <div class="songs song4 song-search"></div>
                 <section class="song-info">
                     <p class="p-info">Café la humedad - Cacho Castaña</p>
-                    <p>4.5 min</p>
+                    <p class="p-info">4.5 min</p>
                 </section>
                         <section class="actions margin-actions">
                             <div class="action action1"></div>
@@ -156,7 +155,7 @@
                 <div class="songs song1 song-search"></div>
                 <section class="song-info">
                     <p class="p-info">Radio gaga - Queen</p>
-                    <p>6.1 min</p>
+                    <p class="p-info">6.1 min</p>
                 </section>
                         <section class="actions margin-actions">
                             <div class="action action1"></div>
@@ -168,7 +167,7 @@
                 <div class="songs song5 song-search"></div>
                 <section class="song-info">
                     <p class="p-info">Beat it - Michael Jackson</p>
-                    <p>5.8 min</p>
+                    <p class="p-info">5.8 min</p>
                 </section>
                 <section class="actions margin-actions">
                     <div class="action action1"></div>
