Listo vista de cancion en espacios y responsive

--- a/TPE5-diazpace_molleker_lucero/html/home.html
+++ b/TPE5-diazpace_molleker_lucero/html/home.html
@@ -80,97 +80,92 @@
                 <div class="artist artist6"></div> -->
             </section>
         </section>
-        <section class="music-sections swing-in-top-fwd">
+        <section class="music-sections swing-in-top-fwd1">
             <h3>Top 10 en Argentina </h3>
             <section class="music-content">
                 <a href="cancion.html"><div class="cont-music">
-                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cancion</p>
                 </div></a>
                 <a href="cancion.html"><div class="cont-music">
-                    <div class="songs song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cancion</p>
                 </div></a>
                 <a href="cancion.html"><div class="cont-music">
-                    <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cancion</p>
                 </div></a>
                 <a href="cancion.html"><div class="cont-music">
-                    <div class="songs song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cancion</p>
                 </div></a>
                 <a href="cancion.html"><div class="cont-music">
-                    <div class="songs song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cancion</p>
                 </div></a>
                 <a href="cancion.html"><div class="cont-music">
-                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cancion</p>
                 </div></a>
-<!--                 <div class="songs song1"></div>
-                <div class="songs song2"></div>
-                <div class="songs song3"></div>
-                <div class="songs song4"></div>
-                <div class="songs song5"></div>
-                <div class="songs song6"></div> -->
+                
             </section>
         </section>
-        <section class="music-sections swing-in-top-fwd">
+        <section class="music-sections swing-in-top-fwd2">
             <h3>Lo nuevo</h3>
                 <section class="music-content">
 
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Queen</p>
                 </div></a>
                 <a href="playlist.html"> <div class="cont-music">
-                    <div class="songs song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Pink Floyd</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Freddy Mercury</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Michael Jackson</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
-                    <p class="name">Cacho Castaña</p>
+                    <div class="songsh song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <p class="name">Queen otra vez</p>
                 </div></a>
             </section>
         </section>
-        <section class="music-sections swing-in-top-fwd">
+        <section class="music-sections swing-in-top-fwd3">
             <h3>Playlist</h3>
             <section class="music-content">
                 <a href="playlist.html"> <div class="cont-music">
-                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Queen</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Pink Floyd</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Freddy Mercury</p>
                 </div></a>
                 <a href="playlist.html"> <div class="cont-music">
-                    <div class="songs song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Michael Jackson</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
-                    <p class="name">Cacho Castaña</p>
+                    <div class="songsh song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <p class="name">Queen otra vez</p>
                 </div></a>
 <!--                 <div class="songs song1"></div>
                 <div class="songs song2"></div>
@@ -180,32 +175,32 @@
                 <div class="songs song6"></div> -->
             </section>
         </section>
-        <section class="music-sections swing-in-top-fwd">
+        <section class="music-sections swing-in-top-fwd4">
             <h3>Podcast</h3>
             <section class="music-content">
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Queen</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Pink Floyd</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Freddy Mercury</p>
                 </div></a>
                 <a href="playlist.html"> <div class="cont-music">
-                    <div class="songs song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Michael Jackson</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
-                    <p class="name">Cacho Castaña</p>
+                    <div class="songsh song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <p class="name">Queen otra vez</p>
                 </div></a>
 <!--                 <div class="songs song1"></div>
                 <div class="songs song2"></div>
@@ -215,33 +210,33 @@
                 <div class="songs song6"></div> -->
             </section>
         </section>
-        <section class="music-sections swing-in-top-fwd">
+        <section class="music-sections swing-in-top-fwd5">
             <h3>Para estudiar</h3>
                 <section class="music-content">
 
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Queen</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song2"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Pink Floyd</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Freddy Mercury</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Michael Jackson</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
-                    <p class="name">Cacho Castaña</p>
+                    <div class="songsh song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <p class="name">Queen otra vez</p>
                 </div></a>
 <!--                 <div class="songs song1"></div>
                 <div class="songs song2"></div>
@@ -251,32 +246,32 @@
                 <div class="songs song6"></div> -->
             </section>
         </section>
-        <section class="music-sections swing-in-top-fwd">
+        <section class="music-sections swing-in-top-fwd6">
             <h3>Para entrenar</h3>
             <section class="music-content">
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Queen</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song2"></div>
+                    <div class="songsh song2"></div>
                     <p class="name">Pink Floyd</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song3"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Freddy Mercury</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song4"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Cacho Castaña</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <div class="songsh song5"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
                     <p class="name">Michael Jackson</p>
                 </div></a>
                 <a href="playlist.html"><div class="cont-music">
-                    <div class="songs song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
-                    <p class="name">Cacho Castaña</p>
+                    <div class="songsh song1"><img  class="play" src="../images/play-hidden.png" width="40px" alt="play"></div>
+                    <p class="name">Queen otra vez</p>
                 </div></a>
 <!--                 <div class="songs song1"></div>
                 <div class="songs song2"></div>
