--- a/TPE5-diazpace_molleker_lucero/html/artista.html
+++ b/TPE5-diazpace_molleker_lucero/html/artista.html
@@ -61,7 +61,7 @@
                         <td class="celda-artista">
                             <section class="actions">
                                 <div class="action action1"></div>
-                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action2"></div>
                                 <div class="action action3"></div>
                             </section>
                         </td>
@@ -74,7 +74,7 @@
                         <td class="celda">
                             <section class="actions">
                                 <div class="action action1"></div>
-                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action2"></div>
                                 <div class="action action3"></div>
                             </section>
                         </td>
@@ -87,7 +87,7 @@
                         <td class="celda">
                             <section class="actions">
                                 <div class="action action1"></div>
-                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action2"></div>
                                 <div class="action action3"></div>
                             </section>
                         </td>
@@ -100,7 +100,7 @@
                         <td class="celda">
                             <section class="actions">
                                 <div class="action action1"></div>
-                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action2"></div>
                                 <div class="action action3"></div>
                             </section>
                         </td>
@@ -113,7 +113,7 @@
                         <td class="celda">
                             <section class="actions">
                                 <div class="action action1"></div>
-                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action2"></div>
                                 <div class="action action3"></div>
                             </section>
                         </td>
@@ -126,7 +126,7 @@
                         <td class="celda">
                             <section class="actions">
                                 <div class="action action1"></div>
-                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action2"></div>
                                 <div class="action action3"></div>
                             </section>
                         </td>
@@ -139,7 +139,7 @@
                         <td class="celda">
                             <section class="actions">
                                 <div class="action action1"></div>
-                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action2"></div>
                                 <div class="action action3"></div>
                             </section>
                         </td>
@@ -152,7 +152,7 @@
                         <td class="celda">
                             <section class="actions">
                                 <div class="action action1"></div>
-                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action2"></div>
                                 <div class="action action3"></div>
                             </section>
                         </td>
@@ -165,7 +165,7 @@
                         <td class="celda">
                             <section class="actions">
                                 <div class="action action1"></div>
-                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action2"></div>
                                 <div class="action action3"></div>
                             </section>
                         </td>
@@ -178,7 +178,7 @@
                         <td class="celda">
                             <section class="actions">
                                 <div class="action action1"></div>
-                                <a href="comentarios.html" class="action action2"></a>
+                                <div class="action action2"></div>
                                 <div class="action action3"></div>
                             </section>
                         </td>
