--- a/TPE5-diazpace_molleker_lucero/html/cancion.html
+++ b/TPE5-diazpace_molleker_lucero/html/cancion.html
@@ -75,7 +75,7 @@
                 </form>  
                 <section class="tres-iconos">
                     <div class="action action1"></div>
-                    <a href="comentarios.html" class="action action2"></a>
+                    <div class="action action2"></div>
                     <div class="action action3"></div>
                 </section>
 
