--- a/TPE5-diazpace_molleker_lucero/html/buscado.html
+++ b/TPE5-diazpace_molleker_lucero/html/buscado.html
@@ -62,7 +62,7 @@
             </section>
                     <section class="actions margin-actions">
                         <div class="action action1"></div>
-                        <a href="comentarios.html" class="action action2"></a>
+                        <div class="action action2"></div>
                         <div class="action action3"></div>
                     </section>
         </section>
@@ -74,7 +74,7 @@
             </section>
                     <section class="actions margin-actions">
                         <div class="action action1"></div>
-                        <a href="comentarios.html" class="action action2"></a>
+                        <div class="action action2"></div>
                         <div class="action action3"></div>
                     </section>
         </section>
@@ -86,7 +86,7 @@
             </section>
                     <section class="actions margin-actions">
                         <div class="action action1"></div>
-                        <a href="comentarios.html" class="action action2"></a>
+                        <div class="action action2"></div>
                         <div class="action action3"></div>
                     </section>
         </section>
@@ -98,7 +98,7 @@
             </section>
                     <section class="actions margin-actions">
                         <div class="action action1"></div>
-                        <a href="comentarios.html" class="action action2"></a>
+                        <div class="action action2"></div>
                         <div class="action action3"></div>
                     </section>
         </section>
