Correccion de errores generales - Terminado

--- a/TPE5-diazpace_molleker_lucero/html/ayuda-inicio.html
+++ b/TPE5-diazpace_molleker_lucero/html/ayuda-inicio.html
@@ -24,7 +24,7 @@
 
         <article>
             <section class="ayuda">
-                <!--flecha atras--><a href="home.html"><div class="back"></div></a>
+                <!--flecha atras--><a href="index.html"><div class="back"></div></a>
                 <h2 class="tit-plan">¿En qué podemos ayudarte?</h2>
                
                 <section id="linea-buscar">
@@ -84,7 +84,6 @@
     
             </section>
         </article>
-    <div class="espacio-blanco"></div>
     <div class="espacio-blanco"></div>
 
     <!--FOOTER CON EL REPRODUCTOR UNA VEZ QUE ENTRAMOS-->
