--- a/TPE5-diazpace_molleker_lucero/html/index.html
+++ b/TPE5-diazpace_molleker_lucero/html/index.html
@@ -49,7 +49,7 @@
 
     <section class="container-links oculto">
         <a href="inicio-sesion.html"><button class="login espacio">Iniciar sesión</a></button>
-        <a href="#opciones"class="registrarse"><button class="registrarse">Registrarse</a></button>
+        <a href="opciones-plan.html"class="registrarse"><button class="registrarse">Registrarse</a></button>
     </section>
 <!--
     <footer class="contact"> 
