--- a/TPE5-diazpace_molleker_lucero/html/actualizar-plan.html
+++ b/TPE5-diazpace_molleker_lucero/html/actualizar-plan.html
@@ -74,20 +74,9 @@
 
     <!--FOOTER CON EL REPRODUCTOR UNA VEZ QUE ENTRAMOS-->
     <section class="pie">
-        <!-- <section class="player"> 
-           <section class="artista">
-                <a href=""><h1>Michael Jackson </h1></a> 
-                <a href=""><p class="span"> - Smooth Criminal</p></a>        
-            </section> 
-        </section>-->
-        <section  class="artista">
-
-            <audio controls="controls" class="barra">
-                <source src="../audio/Smooth Criminal.mp3" type="audio/mp3" />
-            </audio>
-        </section>         
-        
+        <section class="player"></section>    
     </section>
+
     <script src="../js/js.js"></script>
 </body>
 </html>
